--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,35 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Backup files and output files
+*.swp
+*~
+*.bin
+*.o
+*.a
+*.obj
+*.exe
+*.dll
+*.lib
+*.ncb
+*.pdb
+*.suo
+*.idb
+*.sdf
+*.opensdf
+.*.swp
+.DS_Store
+.qmake.stash
+*~
+*.log
+core
+*.stackdump
+/*_history
+/tags
+
+# Output directories
+/build*
+
+# readline history
+*.history
